# ekki_old

./: .gitignore  CMakeLists.txt  imgui.ini
dependencies/imgui/: imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.mm  imgui_tables.cpp  imgui_widgets.cpp
dependencies/imgui/include/imgui/: imgui.h
res/shaders/: basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Square.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/ui/: EditorPanel.cpp  EditorPanel.hpp  MenuBase.cpp  MenuBase.hpp  MobjectPanel.cpp  MobjectPanel.hpp  SceneBuilderPanel.cpp  SceneBuilderPanel.hpp  UI.cpp  UI.hpp  ViewportPanel.cpp  ViewportPanel.hpp
